@@ -265,6 +265,8 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="gamesrepublic"><label for="gamesrepublic">GamesRepublic</label></td>
+							<td><input type="checkbox" id="coinplay"><label for="coinplay">Coinplay.io</label></td>
+							<td><input type="checkbox" id="funstock"><label for="funstock">FunStock Digital</label></td>
 						</tr>
 					</table>
 					<li class="header" id="store_regionalprice_header">Regional Price Comparison</li>
